--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MODEL_PATH='./rf_model_2330.pkl'
+MODEL_PATH='./rf_model_multi.pkl'
 OLLAMA_MODEL_NAME='llama3.2-vision:latest'
 OLLAMA_MODEL_URL='http://localhost:11434'
